비교연산자

--- a/SQL/비교연산자.md
+++ b/SQL/비교연산자.md
@@ -19,3 +19,43 @@
 | `EXISTS`       | 서브쿼리 결과가 **한 건이라도 있으면 참**          | `EXISTS (SELECT * FROM 테이블 WHERE 조건)` | 서브쿼리에 결과가 하나라도 있으면 TRUE   |
 | `ALL`          | 리스트 각각의 원소와 비교하여 **모두 참이면 참**      | `x > ALL (1,2,3)`                     | x가 1, 2, 3 모두보다 크면 TRUE   |
 | `ANY` / `SOME` | 리스트 각각의 원소와 비교한 결과가 **하나라도 참이면 참** | `x > ANY (1,2,3)`                     | x가 1, 2, 3 중 하나라도 크면 TRUE |
+
+## 예제
+| 학생ID | 이름 | 학년 | 점수 |
+| ---- | -- | -- | -- |
+| 1    | 철수 | 1  | 92 |
+| 2    | 영희 | 2  | 85 |
+| 3    | 민수 | 3  | 88 |
+
+```sql
+SELECT *
+FROM 학생
+WHERE 학년 IN (1, 3);
+```
++ 결과: 철수, 민수 (학년이 1 또는 3)
+```sql
+SELECT *
+FROM 학생 s
+WHERE EXISTS (
+    SELECT 1
+    FROM 학생
+    WHERE 학생ID = 1
+);
+```
++ 의미: 학생ID = 1인 행이 존재하면 전체 학생 테이블에서 모든 행 출력.
++ 결과: 철수, 영희, 민수 (조건이 참이므로 모든 행 출력)
+```sql
+SELECT *
+FROM 학생
+WHERE 점수 >= ALL (SELECT 점수 FROM 학생 WHERE 학년 = 2);
+```
++ 의미: 학생 점수가 2학년 학생 점수(85) 이상이면 참
++ 결과: 점수 92, 88 → 철수, 민수
+
+```sql
+SELECT *
+FROM 학생
+WHERE 점수 >= ANY (SELECT 점수 FROM 학생 WHERE 학년 = 2);
+```
++ 의미: 학생 점수가 2학년 학생 점수(85) 중 하나 이상이면 참
++ 결과: 점수 92, 85, 88 → 철수, 영희, 민수
