리눅스 배포판 종류

--- a/System/리눅스 배포판 종류.md
+++ b/System/리눅스 배포판 종류.md
@@ -1,4 +1,4 @@
-## 1.슬랙웨어 리눅스(Slackware Linux)
+## 슬랙웨어 리눅스(Slackware Linux)
 +  배포판 가운데 가장 먼저 대중화된 배포판으로 1992년 패트릭 볼커딩에 의해 출시
 + 최근 패키지 관리의 문제점으로 인하여 인기가 다소 떨어짐
 
